--- a/src/containers/pages/Home/index.css
+++ b/src/containers/pages/Home/index.css
@@ -168,19 +168,19 @@ h4 p {
     }
 }
 
-img#womanchild1 {
+img#pregnancyAvatar {
     position: absolute;
     top: -21.5%;
     left: 36%;
 }
 
-img#womanchild2 {
+img#nbcPncAvatar {
     position: absolute;
     top: -22.4%;
     left: 40%;
 }
 
-img#womanchild3 {
+img#nutritionAvatar {
     position: absolute;
     top: -20.4%;
     left: 35%;
