--- a/src/containers/pages/Home/index.css
+++ b/src/containers/pages/Home/index.css
@@ -1,22 +1,43 @@
-.welcome-box {
-    margin-top: 75px;
+.home-main {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: nowrap;
+    align-items: center;
+    justify-content: space-around;
+    background: white;
+    height: 90%;
 }
 
-.home-main .components-list {
+.welcome-text {
     display: flex;
+    height: auto;
+    width: auto;
     align-items: center;
-    justify-content: center;
-    padding-left: 25px;
-    position: relative;
-    flex-direction: row;
-    height: 400px;
+    margin-bottom: 2rem;
+}
+
+.welcome-text h1 {
+    color: #1b314b;
+    font-size: 32px;
+    font-weight: 500;
+    text-align: center;
 }
 
 .center-vertically {
     display: flex;
     align-items: center;
+    justify-content: flex-start;
+    height: auto;
+    width: 88%;
+}
+
+.components-list {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
     justify-content: center;
-    height: 100%;
+    position: relative;
+    height: 400px;
 }
 
 .nav {
@@ -38,31 +59,6 @@
     height: 100%;
     position: relative;
     background: #f8fafe;
-}
-
-.home-main {
-    display: flex;
-    flex-direction: column;
-    padding: 0 50px 0 50px;
-    background: white;
-    height: 100vh;
-    position: relative;
-}
-
-.home-main .welcome-text {
-    justify-self: flex-start;
-    text-align: center;
-    margin-top: 2rem;
-    margin-bottom: 2rem;
-}
-
-.home-main .welcome-text h1 {
-    color: #1b314b;
-    font-size: 32px;
-    font-weight: 500;
-    letter-spacing: -0.33px;
-    line-height: 38px;
-    text-align: center;
 }
 
 .home-main .button-style {
@@ -121,7 +117,7 @@
 
 .spacer > img {
     display: flex;
-    width: 14rem;
+    width: 75%;
     height: 100%;
     object-fit: cover;
     border-radius: 0.8rem;
@@ -166,18 +162,24 @@ h4 p {
     text-align: center;
 }
 
-@media screen and (max-width: 1100px) {
+@media only screen and (max-width: 768px) {
     .home-main {
         height: auto;
     }
     .home-main .components-list {
         flex-direction: column;
         height: auto;
-        padding: 0;
     }
     .home-main .spacer {
         width: 100%;
         height: 400px;
         margin: 60px 20px;
+    }
+    .welcome-text {
+        margin-top: 2rem;
+        margin-bottom: 4rem;
+    }
+    .welcome-text h1 {
+        font-size: 28px;
     }
 }
