--- a/src/components/DataCircleCard/index.css
+++ b/src/components/DataCircleCard/index.css
@@ -70,7 +70,7 @@
 }
 
 .compartment-wrapper .circlesRow > .inappropriate-feeding {
-    background-color: #003f5c;
+    background-color: #ceb01cd2;
 }
 
 .compartment-wrapper .circlesRow > .green,
@@ -84,23 +84,20 @@
     color: #001429;
     font-size: 1.125rem;
     font-weight: 400;
-    line-height: 1.375rem;
     text-align: left;
     padding: 1rem;
 }
 
 .compartment-wrapper span.number {
     color: #ffffff;
-    font-size: 1.25rem;
+    font-size: 1.3rem;
     font-weight: 400;
-    line-height: 0.875rem;
 }
 
 .compartment-wrapper span.risk-level {
     color: #ffffff;
-    font-size: 0.75rem;
+    font-size: 1rem;
     font-weight: 400;
-    line-height: 0.875rem;
 }
 
 .compartment-wrapper .circleRow > a,
@@ -109,5 +106,7 @@
     text-decoration: inherit;
 }
 
-@media (max-width: 1365px) {
+.card_title {
+    font-size: 1.3rem;
+    text-align: center;
 }
