--- a/src/containers/Compartments/index.css
+++ b/src/containers/Compartments/index.css
@@ -8,4 +8,8 @@
 
 .compartment-wrapper span#breadcrumb-span {
     color: #637381;
+    font-size: 1.2rem;
+}
+#compartment_title {
+    font-size: 2.2rem;
 }
