--- a/src/components/ReportTable/index.css
+++ b/src/components/ReportTable/index.css
@@ -120,3 +120,9 @@
     text-align: left;
     padding: 20px;
 }
+
+#filter-panel p,
+.filters {
+    margin: 10px 0 0;
+    display: inline-block;
+}
