change color of inappropriately fed hierarchical data table column to match compartments circle

--- a/src/containers/HierarchichalDataTable/index.css
+++ b/src/containers/HierarchichalDataTable/index.css
@@ -178,7 +178,7 @@
 }
 
 .compartment-data-table .inappropriately-fed {
-    background-color: #50c4f9;
+    background-color: #ffe9db;
 }
 
 .compartment-data-table span.divider {
