paragraph can't be a child of paragraph, empty string is a valid ReactChild, match children style

--- a/src/containers/pages/Home/index.css
+++ b/src/containers/pages/Home/index.css
@@ -16,6 +16,11 @@
     margin-bottom: 2rem;
 }
 
+.welcome-text span {
+    font-family: inherit;
+    font-size: inherit;
+}
+
 .welcome-text h1 {
     color: #1b314b;
     font-size: 32px;
