--- a/src/containers/LogFace/index.css
+++ b/src/containers/LogFace/index.css
@@ -210,6 +210,7 @@ td {
     border-radius: 0;
     margin-top: 35px;
     min-width: 200px;
+    max-width: 300px;
     background: url(/static/media/search-icon.51c97554.svg) no-repeat;
     background-position: 16px 50%;
     padding-left: 40px;
