--- a/src/containers/HierarchichalDataTable/index.css
+++ b/src/containers/HierarchichalDataTable/index.css
@@ -29,7 +29,7 @@
     background-color: #ffffff;
     border: 1px solid #dadce0;
     color: #3a484f;
-    font-size: 1rem;
+    font-size: 1.2rem;
     font-weight: 500;
     letter-spacing: -0.018rem;
     line-height: 1rem;
@@ -68,7 +68,7 @@
 .compartment-data-table table td:nth-child(1) {
     text-align: left;
     padding-left: 1%;
-    font-size: 15px;
+    font-size: 17px;
     font-weight: 400;
     line-height: 18px;
 }
@@ -80,7 +80,7 @@
 .compartment-data-table .rt-th.rt-resizable-header.-cursor-pointer,
 .compartment-data-table table td {
     color: #3a484f;
-    font-size: 14px;
+    font-size: 16px;
     font-weight: 400;
     line-height: 17px;
 }
@@ -100,7 +100,7 @@
     padding: 15px 0;
     color: #001429;
     font-family: Roboto;
-    font-size: 28px;
+    font-size: 30px;
     letter-spacing: -0.18px;
     line-height: 34px;
 }
@@ -127,7 +127,7 @@
 .compartment-data-table table thead tr th {
     text-align: center;
     color: #3a484f;
-    font-size: 15px;
+    font-size: 17px;
     font-weight: 400;
 }
 
@@ -190,9 +190,8 @@
     color: #0292d3 !important;
 }
 .totals-row > .default-width,
-.totals-row > #total,
-.default-width.totals {
+.totals-row > #total {
     color: #3a484f;
-    font-size: 1rem;
+    font-size: 1.1rem;
     font-weight: bolder;
 }
