add the normal field to nutrition module, total number on title

--- a/src/components/DataCircleCard/index.css
+++ b/src/components/DataCircleCard/index.css
@@ -73,6 +73,10 @@
     background-color: #ceb01cd2;
 }
 
+.compartment-wrapper .circlesRow > .normal {
+    background-color: #7efff5;
+}
+
 .compartment-wrapper .circlesRow > .green,
 .compartment-wrapper .circlesRow > .red,
 .compartment-wrapper .circlesRow > .orange {
