--- a/src/components/page/SideMenu/index.css
+++ b/src/components/page/SideMenu/index.css
@@ -1,67 +1,43 @@
-.side-nav-item {
-    color: #3a484f;
-    line-height: 20px;
-    font-family: Roboto;
-    text-align: left;
-    font-size: 14px;
-    font-weight: 400;
-    padding-left: 22px;
-}
-
-.side-nav-active {
-    background: rgba(1, 146, 212, 0.1);
-    color: #0192d4 !important;
-    font-weight: 500;
-    text-align: left;
-    font-size: 14px;
-    padding-left: 16px;
-}
-
-.nav-item-extend .side-nav-item {
-    padding-left: 16px;
-}
-
-.side-menu-extend {
-    margin: 0;
-    padding: 16px 0 0 0;
-}
-
-.main-container .hidden-container {
-    display: none !important;
-}
-
-.side-menu-extend ul.nav {
-    background: initial;
-    background-color: initial;
-    max-width: initial;
-    width: 100%;
-}
-
-.main-container .sidebar {
+.side-menu-container {
     width: 300px;
-}
-
-.sidebar .side-menu-extend a:hover {
-    text-decoration: none;
-    color: #0192d4;
-}
-
-.sidebar .side-menu-container {
     position: relative;
-    width: 100%;
+    top: 60px;
     height: 100%;
-    flex: 1 1;
-    border: 1px;
-    border-right-style: solid;
-    border-right-color: #dfe3e8;
     background: #f8fafe;
+    border-right: 1px solid #dfe3e8;
 }
 
-.sidebar .side-menu-container .row {
-    margin: auto;
+.side-menu-container ul.rc-menu {
+    box-shadow: none;
+    border: none;
+    text-decoration: none;
 }
 
-.side-menu-container .side-menu-extend ul.side-collapse-nav .collapse {
-    padding-right: initial;
-    padding-left: 33px;
+.side-menu-container ul.rc-menu a {
+    display: inline-block;
+    width: 100%;
+    color: rgb(102, 102, 102);
+}
+.side-menu-container .rc-menu-item-active:not(.rc-menu-item-selected) {
+    background: transparent !important;
+}
+
+.side-menu-container .rc-menu-item-active a {
+    color: #0093db !important;
+    text-decoration: none;
+}
+
+.side-menu-container .rc-menu-item-selected {
+    border-right: 5px solid #0093db;
+    background: rgba(1, 146, 212, 0.1);
+    color: #0093db;
+}
+
+.side-menu-container .rc-menu-item-selected a {
+    color: #0093db !important;
+}
+
+.rc-menu-submenu-selected {
+    background: transparent !important;
+    color: #0093db !important;
 }
