--- a/src/App/App.css
+++ b/src/App/App.css
@@ -88,12 +88,11 @@ fieldset[disabled] .gatekeeper-btn.active {
     border: 0;
     margin: 0;
     padding: 0;
+    font-family: 'Roboto', 'Helvetica';
 }
 
 .main-app-container .main-container {
-    top: 60px;
-    height: 100%;
-    position: relative;
+    min-height: 100vh;
 }
 
 .main-app-container .navbar {
@@ -103,28 +102,12 @@ fieldset[disabled] .gatekeeper-btn.active {
     width: 100%;
 }
 
-.content {
+.main-app-container .content {
     width: 100%;
+    position: relative;
+    top: 60px;
 }
 
-.side-menu-section {
-    overflow-x: hidden;
-    height: 100%;
-    position: fixed;
-    background-color: inherit;
-    box-shadow: inset -1px 0 0 0 #dfe3e8;
-}
-
-.container-section {
-    margin-left: 16%;
-    margin-top: 68px;
-    padding: 24px;
-}
 .main-page-row {
     background-color: #f8f9fd;
-}
-@media screen and (max-width: 1360px) {
-    .side-menu-container {
-        font-size: 80%;
-    }
 }
