--- a/src/components/VillageData/index.css
+++ b/src/components/VillageData/index.css
@@ -88,7 +88,7 @@
     width: 57px;
 }
 
-.village .table-container table #body {
+.village .table-container-div table #body {
     overflow: auto;
 }
 
