Update risk coloring color codes for nutrition risk cats

--- a/src/components/DataCircleCard/index.css
+++ b/src/components/DataCircleCard/index.css
@@ -74,7 +74,7 @@
 }
 
 .compartment-wrapper .circlesRow > .normal {
-    background-color: #7efff5;
+    background-color: #38736e;
 }
 
 .compartment-wrapper .circlesRow > .green,
